   another CDRreadTrack() call in threaded mode, which solves the problem
   with Final Fantasy 6 (maybe other games too).
 * plugins/dfcdrom/cfg.c: Likewise.
 * plugins/dfcdrom/cfg.h: Likewise.
 * po/update-pot.sh: Include files from plugins/dfcdrom/cdrcfg-0.1df.
 * po/pcsx.pot, po/zh_CN.po, po/zh_TW.po, po/pt_BR.po: Updated.
 * plugins/dfcdrom/cdr.h: Moved global variables into cdr-linux.c.

November 26, 2009 Wei Mingzhi <weimingzhi@gmail.com>

 * plugins/dfcdrom/cdr.c: Separated GNU/Linux-specific code and NULL code
   into separate files (cdr-linux.c and cdr-null.c).
 * plugins/dfcdrom/cdr-linux.c: Added.
 * plugins/dfcdrom/cdr-null.c: Likewise.
 * plugins/dfcdrom/cdrcfg-0.1df: Moved configuration utility into a subdir.
 * plugins/dfcdrom/interface.c: Moved into cdrcfg-0.1df directory.
 * plugins/dfcdrom/interface.h: Likewise.
 * plugins/dfcdrom/cfg-gtk2.c: Likewise.
 * plugins/dfcdrom/support.c: Likewise.
 * plugins/dfcdrom/support.h: Likewise.
 * plugins/dfcdrom/main.c: Likewise.
 * plugins/dfcdrom/callbacks.c: Likewise.
 * plugins/dfcdrom/callbacks.h: Likewise.
 * plugins/dfcdrom/cfgCdr.glade: Likewise.
 * plugins/dfcdrom/Makefile.am: Likewise.
 * libpcsxcore/psxbios.c: Fixed MSVC6 errors when psxbios logging is enabled.
 * debian/changelog: Changed version number.
 * libpcsxcore/cdriso.c: Added support for reporting current CDDA play time.

November 25, 2009 Wei Mingzhi <weimingzhi@gmail.com>

 * po/zh_CN.po, po/zh_TW.po: Updated.

November 13, 2009 Wei Mingzhi <weimingzhi@gmail.com>

 * libpcsxcore/misc.c: Fixed CheckCdrom() and LoadCdrom() so that format like
   "cdrom:\\FILENAME" and "cdrom:/FILENAME" in SYSTEM.CNF can be accepted.
 * libpcsxcore/ix86_64/README: Removed obsolete information.
 * macosx/plugins/CDDeviceInterface/src/PlugCD.c: Changed the include path
   to SCSITaskLib.h for compatibility with Mac OS X 10.6 SDK (Thanks maggix).
 * macosx/English.lproj/PCSX.nib/objects.nib: Added 2 more savestate slots.